--- a/_pages/404.md
+++ b/_pages/404.md
@@ -6,3 +6,5 @@ permalink: /404.html
 ---
 
 Sorry, but the page you were trying to view does not exist.
+ごめんなさいね。。。４０４です。
+こちら https://kiinan.github.io/ からトップへどうぞ＾＾/
