Update and rename 2021-07-21-post-newone.md to 2021-07-22-post-.md

--- a/_posts/2021-07-22-post-.md
+++ b/_posts/2021-07-22-post-.md
@@ -1,11 +1,11 @@
 ---
-title: "Post: newone"
-last_modified_at: 2020-07-01
+title: "ここはタイトル"
+last_modified_at: 2021-07-22
 categories:
-  - Blog
+  - git
 tags:
-  - Post Formats
-  - readability
+  - タグ1
+  - パズルすき
   - standard
 
 ---
