cange imagepath comfigyml

--- a/_posts/2021-07-22-eigode-.md
+++ b/_posts/2021-07-22-eigode-.md
@@ -1,7 +1,7 @@
 ---
 title: "ここはタイトル"
 header:
-  image: /assets/images/image-1.jpg
+  image: /assets/images/image-1.JPG
 last_modified_at: 2021-07-22
 categories:
   - git
