--- a/_pages/404.md
+++ b/_pages/404.md
@@ -1,4 +1,5 @@
 ---
+layout: default
 title: "Page Not Found"
 excerpt: "Page not found. Your pixels are in another canvas."
 sitemap: false
@@ -6,5 +7,3 @@ permalink: /404.html
 ---
 
 Sorry, but the page you were trying to view does not exist.
-ごめんなさいね。。。４０４です。
-こちら https://kiinan.github.io/ からトップへどうぞ＾＾/
